WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51181
[GTK] Compile warning introduced in
r74129
https://bugs.webkit.org/show_bug.cgi?id=51181
Summary
[GTK] Compile warning introduced in r74129
Carlos Garcia Campos
Reported
2010-12-16 05:21:05 PST
../WebCore/platform/gtk/RenderThemeGtk.cpp:821: warning: "GTK_API_VERSION_2" is not defined the problem is that it's using #if GTK_API_VERSION_2 instead of #ifdef
Attachments
Patch to fix the warning
(1.08 KB, patch)
2010-12-16 05:23 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2010-12-16 05:23:58 PST
Created
attachment 76756
[details]
Patch to fix the warning
Martin Robinson
Comment 2
2010-12-16 09:14:33 PST
Comment on
attachment 76756
[details]
Patch to fix the warning Thanks!
WebKit Commit Bot
Comment 3
2010-12-16 09:16:31 PST
Comment on
attachment 76756
[details]
Patch to fix the warning Rejecting
attachment 76756
[details]
from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-3', 'apply-attachment', '--non-interactive', 76756]" exit_code: 2 Last 500 characters of output: ailed to merge in the changes. Patch failed at 0001 2010-12-16 Yury Semikhatsky <
yurys@chromium.org
> When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at WebKitTools/Scripts/update-webkit line 132. Failed to run "['WebKitTools/Scripts/update-webkit']" exit_code: 2 Full output:
http://queues.webkit.org/results/7179076
Xan Lopez
Comment 4
2010-12-17 03:13:28 PST
Comment on
attachment 76756
[details]
Patch to fix the warning Landed manually in
r74246
.
Xan Lopez
Comment 5
2010-12-17 03:13:38 PST
Closing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug