2010-12-17  Carlos Garcia Campos  <cgarcia@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Compile warning introduced in r74129
        https://bugs.webkit.org/show_bug.cgi?id=51181

        * platform/gtk/RenderThemeGtk.cpp:
        (WebCore::RenderThemeGtk::gtkContainer):

Canonical link: https://commits.webkit.org/64592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74246 268f45cc-cd09-0410-ab3c-d52691b4dbfc